--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                         <configuration>
+                        <transformers>
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>com.example.App</mainClass>
+                            </transformer>
+                        </transformers>
+                    </configuration>
                     </execution>
                 </executions>
             </plugin>
